// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar Snapshots tests should match custom title & subtitle snapshot 1`] = `
<div>
  <div
    class="component m"
  >
    <svg
      class="svg"
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="backgroundCircle m"
        cx="32"
        cy="32"
        r="29"
      />
      <circle
        class="progressCircle negative m"
        cx="32"
        cy="32"
        r="29"
        stroke-dasharray="182.212"
        stroke-dashoffset="145.770"
        transform="rotate(-90 32 32)"
      />
    </svg>
    <div
      class="labelWrapper"
    >
      <span
        style="color: red;"
      >
        title
      </span>
    </div>
  </div>
</div>
`;

exports[`ProgressBar Snapshots tests should match snapshot 1`] = `
<div>
  <div
    class="component m"
  >
    <svg
      class="svg"
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="backgroundCircle m"
        cx="32"
        cy="32"
        r="29"
      />
      <circle
        class="progressCircle positive m"
        cx="32"
        cy="32"
        r="29"
        stroke-dasharray="182.212"
        stroke-dashoffset="145.770"
        transform="rotate(-90 32 32)"
      />
    </svg>
    <div
      class="labelWrapper"
    >
      <div
        class="title secondary secondary-large bold"
      >
        20
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressBar Snapshots tests should match with view snapshot 1`] = `
<div>
  <div
    class="component m"
  >
    <svg
      class="svg"
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="backgroundCircle m"
        cx="32"
        cy="32"
        r="29"
      />
      <circle
        class="progressCircle negative m"
        cx="32"
        cy="32"
        r="29"
        stroke-dasharray="182.212"
        stroke-dashoffset="145.770"
        transform="rotate(-90 32 32)"
      />
    </svg>
    <div
      class="labelWrapper"
    >
      <div
        class="title secondary secondary-large bold"
      >
        20
      </div>
    </div>
  </div>
</div>
`;
